test/negative/iface_construct.mut
# Negative: construct interface directly

interface IShape
    def area(self) -> i64
end

s: IShape = IShape()
